login / home Api Rest

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="col-12 row m-0 background-image justify-content-center">
 
   <div class="box">
-    <form [formGroup]="formLogin" (submit)="login()">
+    <form [formGroup]="formLogin" (submit)="Login()">
       <div class="container">
         <div class="top-header">
           <!-- <img class="icon" src="../../../assets/leonLogo.png" alt="waiting for image"> -->
