--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  font-family: 'Poppins', sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: #e5f0fd !important;
+}
+
+::-webkit-scrollbar {
+  height: 13px;
+  width: 13px;
+  background: #e5f0fd;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #0070ff;
+  -webkit-border-radius: 1ex;
+  border-radius: 1ex;
+}
