--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="col-12 row m-0 background-image justify-content-center">
     <div class="container">
       <div class="row">
