--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,4 @@
 <app-menu></app-menu>
 <div class="col-12 row m-0 background-image justify-content-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="text-center">Bienvenido a la aplicación de prueba</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <p class="text-center">Esta es una aplicación de prueba para el curso de Angular de la Universidad de la Sierra Sur</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-tasks></app-tasks>
+</div>
