--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -1,6 +1,6 @@
-.example-card {
+/* .example-card {
   max-width: 400px;
-}
+} */
 
 .example-header-image {
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
@@ -66,6 +66,8 @@
 /* estilos card */
 .example-card {
   border-radius: 30px;
+  background: #fff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .mat-mdc-card {
