--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -12,15 +12,15 @@
           <div class="col-12 row m-1 p-0 justify-content-end back styleCard">
             <div class="col-4 row m-0 p-1 align-items-center justify-content-start">
               <span class="col-1 material-icons text-success">timer</span>
-              <span class="col-3 justify-content-end" style="color: black;">{{ this.count.baja }}</span>
+              <span class="col-3 justify-content-end" style="color: black;">{{ this.count?.baja }}</span>
             </div>
             <div class="col-4 row m-0 p-1 align-items-center justify-content-center">
               <span class="col-1 material-icons text-warning">timer</span>
-              <span class="col-3 justify-content-end" style="color: black;">{{ this.count.media }}</span>
+              <span class="col-3 justify-content-end" style="color: black;">{{ this.count?.media }}</span>
             </div>
             <div class="col-4 row m-0 p-1 justify-content-center align-items-center">
               <span class="col-1 material-icons text-danger">timer</span>
-              <span class="col-3 justify-content-end" style="color: black;">{{ this.count.alta }}</span>
+              <span class="col-3 justify-content-end" style="color: black;">{{ this.count?.alta }}</span>
             </div>
           </div>
         </div>
