--- a/src/app/components/tasks/tasks.component.css
+++ b/src/app/components/tasks/tasks.component.css
@@ -182,3 +182,20 @@ tr.example-detail-row {
 ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
   background-color: #ffff !important;
 }
+
+.submit {
+  width: 100%;
+  height: 45px;
+  border: none;
+  border-radius: 30px;
+  font-size: 15px;
+  background: #0070ff !important;
+  color: #fff !important;
+  cursor: pointer;
+}
+
+.input-field {
+  width: 100%;
+  margin-top: 15px;
+  position: relative;
+}
