--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -120,6 +120,8 @@ i {
   z-index: 1;
   cursor: pointer;
   font-size: 20px;
+  background: rgba(255, 255, 255, 0);
+  border: none;
 }
 
 /* Estilos para la sección final */
