--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,5 @@
+<h1 class="w-100 text-center pb-3 pt-4 mb-0 text-gray">Modulo de Tareas</h1>
+
 <div class="input-field p-3">
   <button mat-flat-button type="submit" class="submit" (click)="ModalCreateTask()">Crear Tarea</button>
 </div>
