--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,12 +6,12 @@
 
     <span class="p-auto justify-content-start menuItem">
       <!-- <img class="icon_user" src="../../../assets/icon_house.png" alt="waiting for image" /> -->
-      <label style="margin-left: 0.5rem;">Administrador</label>
+      <label style="margin-left: 0.5rem;" (click)="RedirectToAdmin()" >Administrador</label>
     </span>
 
     <span class="p-auto justify-content-start menuItem">
       <!-- <img class="icon_user" src="../../../assets/icon_house.png" alt="waiting for image" /> -->
-      <label style="margin-left: 0.5rem;">Tareas</label>
+      <label style="margin-left: 0.5rem;"(click)="RedirectToHome()">Tareas</label>
     </span>
 
   </div>
