--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -10,7 +10,7 @@
         </span>
       </div>
 
-      <div class="col-4 row m-0 p-0  justify-content-end">
+      <div class="col-4 row m-0 p-0 justify-content-end">
         <button mat-flat-button class="button" color="accent" [disabled]="false" (click)="ModalRegisterUser()">
           Registrar Usuario
         </button>
@@ -43,17 +43,16 @@
             <th mat-header-cell *matHeaderCellDef> Editar </th>
             <td mat-cell *matCellDef="let element">
               <span class="material-icons" style="color: #0197fa; cursor: pointer;"
-                (click)="ModalUpdateUser()">edit</span>
+                (click)="ModalUpdateUser(element)">edit</span>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
-              <span class="material-icons" style="color: #ff0000; cursor: pointer;" (click)="DeleteUser()">delete</span>
+              <span class="material-icons" style="color: #ff0000; cursor: pointer;" (click)="DeleteUser(element.id)">delete</span>
             </td>
           </ng-container>
-
 
           <tr mat-header-row *matHeaderRowDef="this.ColumnsUnfoUsers"></tr>
           <tr mat-row *matRowDef="let row; columns: this.ColumnsUnfoUsers;"></tr>
