--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,16 +1,16 @@
 <div class="col-12 row Rectangle-8 colorWhite">
   <div class="col-9 row m-0 p-0 align-items-center">
     <span class="w-auto p-0 justify-content-start px-2">
-      <!-- <img class="icon" src="../../../assets/logo.png" alt="waiting for image" /> -->
+      <img class="icon" src="../../../assets/logo.png" alt="waiting for image" />
     </span>
 
     <span class="p-auto justify-content-start menuItem">
-      <!-- <img class="icon_user" src="../../../assets/icon_house.png" alt="waiting for image" /> -->
+      <img class="icon_user" src="../../../assets/administracion.png" alt="waiting for image" />
       <label style="margin-left: 0.5rem;" (click)="RedirectToAdmin()" >Administrador</label>
     </span>
 
     <span class="p-auto justify-content-start menuItem">
-      <!-- <img class="icon_user" src="../../../assets/icon_house.png" alt="waiting for image" /> -->
+      <img class="icon_user" src="../../../assets/tarea.png" alt="waiting for image" />
       <label style="margin-left: 0.5rem;"(click)="RedirectToHome()">Tareas</label>
     </span>
 
@@ -18,7 +18,7 @@
   <div class="col-3 row m-0 p-0 align-items-center justify-content-end">
 
     <span class="align-items-center w-auto p-auto">
-      <!-- <img src="../../../assets/icon_user.png" alt="" class="icon_user"> -->
+      <img src="../../../assets/user.png" alt="" class="icon_user">
       <label style="margin-left: 0.5rem;">{{this.parameterServices.name}}</label>
     </span>
   </div>
