--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="formLogin" (submit)="Login()">
       <div class="container">
         <div class="top-header">
-          <!-- <img class="icon" src="../../../assets/leonLogo.png" alt="waiting for image"> -->
+          <img class="icon" src="../../../assets/logo.png" alt="waiting for image">
           <header>Login</header>
         </div>
         <div class="input-field">
