--- a/src/app/components/administrator/administrator.component.css
+++ b/src/app/components/administrator/administrator.component.css
@@ -1,3 +1,14 @@
+:host {
+  display: block;
+  background-image: url('../../../assets/2.png'); /* Ruta relativa a la carpeta 'assets' */
+  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  min-height: 100vh; /* Asegura que el fondo cubra toda la pantalla */
+  padding: 0;
+  margin: 0;
+}
+
 .mat-mdc-unelevated-button.mat-accent {
   --mdc-filled-button-container-color: #0070ff;
   --mdc-filled-button-label-text-color: #fff;
