--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -50,7 +50,8 @@
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
-              <span class="material-icons" style="color: #ff0000; cursor: pointer;" (click)="DeleteUser(element.id)">delete</span>
+              <span class="material-icons" style="color: #ff0000; cursor: pointer;"
+                (click)="DeleteUser(element.id)">delete</span>
             </td>
           </ng-container>
 
