--- a/src/app/components/tasks/update-tasks/update-tasks.component.html
+++ b/src/app/components/tasks/update-tasks/update-tasks.component.html
@@ -47,7 +47,8 @@
       </div>
 
       <div class="form mb-4 row m-0 justify-content-center">
-        <button mat-raised-button color="primary" type="submit" class="submit" [disabled]="formGroup.invalid">Actualizar Tarea</button>
+        <button mat-raised-button color="primary" type="submit" class="submit" [disabled]="formGroup.invalid">Actualizar
+          Tarea</button>
       </div>
     </form>
   </div>
