--- a/src/app/components/administrator/administrator.component.css
+++ b/src/app/components/administrator/administrator.component.css
@@ -1,10 +1,10 @@
 :host {
   display: block;
-  background-image: url('../../../assets/2.png'); /* Ruta relativa a la carpeta 'assets' */
-  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
-  background-position: center; /* Centra la imagen */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  min-height: 100vh; /* Asegura que el fondo cubra toda la pantalla */
+  background-image: url('../../../assets/2.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
 }
