--- a/src/app/components/administrator/register-user/register-user.component.html
+++ b/src/app/components/administrator/register-user/register-user.component.html
@@ -37,7 +37,8 @@
       </div>
 
       <div class="form mb-4 row m-0 justify-content-center">
-        <button mat-raised-button color="primary" type="submit" class="submit" [disabled]="formGroup.invalid">Crear Usuario</button>
+        <button mat-raised-button color="primary" type="submit" class="submit" [disabled]="formGroup.invalid">Crear
+          Usuario</button>
       </div>
     </form>
   </div>
