--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -42,16 +42,24 @@
           <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef> Editar </th>
             <td mat-cell *matCellDef="let element">
-              <span class="material-icons" style="color: #0197fa; cursor: pointer;"
-                (click)="ModalUpdateUser(element)">edit</span>
+              <span class="material-icons"
+                    [ngClass]="{'disabled': element.profile === 'SuperAdmin' || element.id === 1}"
+                    [style.color]="(element.profile === 'SuperAdmin' || element.id === 1) ? 'gray' : '#0197fa'"
+                    (click)="(element.profile !== 'SuperAdmin' && element.id !== 1) && ModalUpdateUser(element)">
+                edit
+              </span>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef> Eliminar </th>
             <td mat-cell *matCellDef="let element">
-              <span class="material-icons" style="color: #ff0000; cursor: pointer;"
-                (click)="DeleteUser(element.id)">delete</span>
+              <span class="material-icons"
+                    [ngClass]="{'disabled': element.profile === 'SuperAdmin' || element.id === 1}"
+                    [style.color]="(element.profile === 'SuperAdmin' || element.id === 1) ? 'gray' : '#ff0000'"
+                    (click)="(element.profile !== 'SuperAdmin' && element.id !== 1) && DeleteUser(element.id)">
+                delete
+              </span>
             </td>
           </ng-container>
 
