--- a/src/app/components/administrator/administrator.component.html
+++ b/src/app/components/administrator/administrator.component.html
@@ -6,7 +6,7 @@
     <div class="col-12 row m-0 p-0 py-3 text-gray">
       <div class="col-8 row m-0 justify-content-start align-items-center">
         <span class="px-3 txt">
-          Información Registros:
+          Información Registros de Usuarios:
         </span>
       </div>
 
@@ -70,4 +70,57 @@
       </div>
     </div>
   </div>
+
+  <div class="col-11 m-4 row bgblue">
+    <div class="col-12 row m-0 p-0 py-3 text-gray">
+      <div class="col-8 row m-0 justify-content-start align-items-center">
+        <span class="px-3 txt">
+          Información Registros de Tareas:
+        </span>
+      </div>
+
+      <div class="col-12 row m-0 p-0 pt-2 mt-2" *ngIf="this.showTableInfoTasks">
+        <table mat-table [dataSource]="this.tableInfoTasks" class="tableround">
+
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="nameTask">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.nameTask}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef> Descripción </th>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="priority">
+            <th mat-header-cell *matHeaderCellDef> Prioridad </th>
+            <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="state">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="userGestion">
+            <th mat-header-cell *matHeaderCellDef> Usuario Gestion </th>
+            <td mat-cell *matCellDef="let element"> {{element.userGestion}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="this.ColumnsUnfoTasks"></tr>
+          <tr mat-row *matRowDef="let row; columns: this.ColumnsUnfoTasks;"></tr>
+        </table>
+      </div>
+    </div>
+  </div>
+
 </div>
+
+
+
+
